# DiceParser

./: .format.clang  .gitignore  .gitlab-ci.yml  .gitmodules  .kde-ci.yml  .travis.yml  AUTHORS  CHANGELOG  CMakeLists.txt  HelpMe.md  Messages.sh  README.md  booleancondition.cpp  booleancondition.h  community_macro.md  compositevalidator.cpp  compositevalidator.h  diceParser.pro  dicealias.cpp  dicealias.h  diceparser.cpp  diceparser.h  diceparser.pri  diceresult.cpp  diceresult.h  diceroller.cpp  diceroller.h  die.cpp  die.h  highlightdice.cpp  highlightdice.h  main.cpp  operationcondition.cpp  operationcondition.h  parsingtoolbox.cpp  parsingtoolbox.h  qmltypesregister.cpp  qmltypesregister.h  range.cpp  range.h  (+10 more)
cli/: CMakeLists.txt  cmds.txt  displaytoolbox.cpp  displaytoolbox.h  generateimage.cpp  main.cpp  test_dice.sh
cli/i18n/: dice_en.ts  dice_fr.ts
diceparser/: CMakeLists.txt  diceparser.cpp  diceroller.cpp  diceroller.h  die.cpp  die.h  highlightdice.cpp  operationcondition.h  parsingtoolbox.cpp  qmltypesregister.cpp  validator.cpp  validator.h  validatorlist.cpp  validatorlist.h
diceparser/include/: diceparser.h  diceparserhelper.h  parsingtoolbox.h
diceparser/node/: bind.h  countexecutenode.cpp  countexecutenode.h  dicerollernode.cpp  dicerollernode.h  executionnode.cpp  explodedicenode.cpp  explodedicenode.h  filternode.cpp  forloopnode.h  groupnode.h  ifnode.h  jumpbackwardnode.h  keepdiceexecnode.cpp  keepdiceexecnode.h  listaliasnode.cpp  listsetrollnode.h  numbernode.cpp  numbernode.h  occurencecountnode.cpp  occurencecountnode.h  paintnode.cpp  repeaternode.cpp  repeaternode.h  scalaroperatornode.cpp  splitnode.cpp  startingnode.cpp  startingnode.h  stringnode.cpp  valueslistnode.cpp  variablenode.h
diceparser/result/: diceresult.cpp  diceresult.h  result.cpp  scalarresult.cpp  stringresult.cpp
gui/: mainwindow.cpp  mainwindow.h
include/: dicealias.h  diceparser.h  diceparserhelper.h  highlightdice.h  parsingtoolbox.h
include/diceparser/: diceparser.h  diceparser_global.h  parsingtoolbox.h
irc/: CMakeLists.txt  Readme.md  botircdiceparser.cpp  botircdiceparser.h  irc.pri  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
mobile/: CMakeLists.txt  commandmodel.cpp  commandmodel.h  main.cpp  maincontroler.cpp  maincontroler.h  mainwindow.h  mobile.pro  qml.qrc
node/: allsamenode.cpp  allsamenode.h  bind.cpp  bind.h  countexecutenode.cpp  countexecutenode.h  dicerollernode.cpp  dicerollernode.h  executionnode.cpp  executionnode.h  explodedicenode.cpp  explodedicenode.h  explosedicenode.cpp  explosedicenode.h  filternode.cpp  filternode.h  forloopnode.cpp  groupnode.cpp  groupnode.h  helpnode.cpp  helpnode.h  ifnode.cpp  ifnode.h  jumpbackwardnode.cpp  jumpbackwardnode.h  keepdiceexecnode.cpp  keepdiceexecnode.h  listaliasnode.cpp  listaliasnode.h  listsetrollnode.cpp  listsetrollnode.h  mergenode.cpp  mergenode.h  node.pri  numbernode.cpp  numbernode.h  occurencecountnode.cpp  occurencecountnode.h  paintnode.cpp  paintnode.h  (+27 more)
result/: diceresult.cpp  diceresult.h  result.cpp  result.h  scalarresult.cpp  scalarresult.h  stringresult.cpp  stringresult.h
src/: CMakeLists.txt
src/libparser/: CMakeLists.txt  booleancondition.h  dicealias.cpp  diceparser.cpp  diceparser.pc.in  diceroller.cpp  die.cpp  highlightdice.cpp  operationcondition.cpp  parsingtoolbox.cpp  range.h  validator.cpp
src/libparser/include/diceparser/: dicealias.h  diceparserhelper.h  highlightdice.h  parsingtoolbox.h
src/libparser/include/diceparser_qobject/: diceparser_qobject_global.h  diceroller.h  qmltypesregister.h
src/libparser/node/: allsamenode.cpp  allsamenode.h  bind.cpp  bind.h  countexecutenode.cpp  dicerollernode.cpp  executionnode.cpp  executionnode.h  explodedicenode.cpp  explodedicenode.h  filternode.cpp  filternode.h  groupnode.cpp  groupnode.h  helpnode.cpp  ifnode.cpp  ifnode.h  jumpbackwardnode.cpp  jumpbackwardnode.h  keepdiceexecnode.cpp  keepdiceexecnode.h  listsetrollnode.cpp  mergenode.cpp  mergenode.h  node.pri  numbernode.cpp  occurencecountnode.cpp  occurencecountnode.h  paintnode.cpp  paintnode.h  parenthesesnode.cpp  parenthesesnode.h  repeaternode.cpp  repeaternode.h  replacevaluenode.cpp  replacevaluenode.h  rerolldicenode.cpp  roundnode.cpp  roundnode.h  scalaroperatornode.cpp  (+13 more)
src/libparser/result/: diceresult.cpp  result.cpp  result.h  stringresult.cpp  stringresult.h
src/tests/dice/: CMakeLists.txt  tst_dice.cpp
src/tests/fuzzer/testcase_dir/: gooddata.txt
tests/: CMakeLists.txt  testnode.cpp  tst_dice.cpp
tests/dice/: CMakeLists.txt  testnode.h  tst_dice.cpp
tests/fuzzer/: CMakeLists.txt  run_test.sh  testcase.cpp
tests/fuzzer/testcase_dir/: gooddata.txt
unittest/: CMakeLists.txt  unittest.cpp
webserver/: CMakeLists.txt  diceserver.cpp  diceserver.h  main.cpp
